# helio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  helio.bat  helio.py  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py
agent/: __init__.py  auth.py  auth_cli.py  clarifier.py  code_builder.py  deterministic_reducer.py  docs_agent.py  error_diagnosis.py  executor.py  handoff_schemas.py  memory_orchestrator.py  multi_agent_cli.py  multi_agent_prompts.py  openrouter_client.py  plan_executor.py  planner_agent.py  planner_schema.py  prompts.py  rag_prompts.py  rag_prompts_minimal.py  secure_executor.py  simulation_executor.py  structured_logger.py  task_contract.py
agent/schemas/: __init__.py  api_cards.py  pv_spec_schema.py
agent/tools/: compliance.py  introspection.py
docs/: examples.md  installation.md  model-selection.md  quickstart.md  troubleshooting.md
scripts/: install_sandbox.py
